--- a/final_project/index.html
+++ b/final_project/index.html
@@ -8,10 +8,15 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300&display=swap" rel="stylesheet"> -->
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index_style.css">
+
+
 </head>
 
 <body>
@@ -23,15 +28,36 @@
         </div>
 
         <div class="jumbotron">
-            <div class="container">
+            <div class="container carousel">
                 <div class="row">
-                    <div class="col-md-8">
-                        <img class="botton" src="PhotoStudio/weddingBW.jpg" />
-                        <img class="top" src="PhotoStudio/weddingThailand.webp" />
+                    <div class="col">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide container" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="PhotoStudio/scenery.jpg" class="d-block w-100" alt="...">
+                                </div>
+
+                                <div class="carousel-item">
+                                    <img src="PhotoStudio/gowns2.png" class="d-block w-100" alt="...">
+
+                                </div>
+
+                                <div class="carousel-item">
+                                    <img src="PhotoStudio/wedding4.jpg" class="d-block w-100" alt="...">
+
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <ul class="nav-list">
                             <li><a href="#">Services</a></li>
+                            <li><a href="#">Wedding</a></li>
+                            <li><a href="#">Outdoor</a></li>
+                            <li><a href="#">Studio</a></li>
+                            <li><a href="#">Drone</a></li>
+                            <li><a href="#">Testimonial</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Make A Booking</a></li>
                             <li><a href="#">Contact Us</a></li>
@@ -76,7 +102,9 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
