--- a/final_project/cart.html
+++ b/final_project/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DLJ & Co.</title>
+    <title>Cart</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -13,9 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style1.css">
-
-
-
 </head>
 
 <body>
@@ -36,64 +33,14 @@
                 <i class="fas fa-shopping-bag fa-3x"><a href="/cart.html"></a></i>
             </ul>
         </div>
-        <div class="container carousel">
+
+        <div class="container services">
             <div class="row">
-                <div class="col">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide container" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="PhotoStudio/scenery.jpg" class="d-block w-100" alt="...">
-                            </div>
 
-                            <div class="carousel-item">
-                                <img src="PhotoStudio/gowns2.png" class="d-block w-100" alt="...">
-
-                            </div>
-
-                            <div class="carousel-item">
-                                <img src="PhotoStudio/wedding4.jpg" class="d-block w-100" alt="...">
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <!--<div class="col-md-4">
-                    <ul class="nav-list">
-                        <li class="title">SERVICES</li><br>
-                        <li>Wedding</a>
-                        </li>
-                        <li>Outdoor</a>
-                        </li>
-                        <li>Studio</a>
-                        </li>
-                        <li>Drone</a>
-                        </li>
-                        <li>Architectural</li>
-                    </ul>
-                </div> -->
             </div>
         </div>
 
-        <div class="bottom container">
-            <div class="row gallery">
-                <div class="column">
-                    <img src="PhotoStudio/singapore1.jpg" alt="Gardens By The Bay" style="width:100%">
-                </div>
-                <div class="column">
-                    <img src="PhotoStudio/gowns2.png" alt="Wedding gown" style="width:100%">
-                </div>
-                <div class="column">
-                    <img src="PhotoStudio/scenery.jpg" alt="Beautiful scenery" style="width:100%">
-                </div>
-                <div class="column">
-                    <img src="PhotoStudio/wedding3.jpg" alt="Wedding 2" style="width:100%">
-                </div>
-                <div class="column">
-                    <img src="PhotoStudio/wedding4.jpg" alt="Wedding 3" style="width:100%">
-                </div>
-            </div>
-        </div>
+
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
@@ -120,17 +67,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <script>
-        // When the user clicks on div, open the popup
-        // Jenny: do we still want to implement the pop up? ^
-        function myFunction() {
-            var popup = document.getElementById("myPopup");
-            popup.classList.toggle("show");
-        }
-    </script>
-
-
 
 </body>
 
