--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 
         <div class="nav_bar">
             <ul class="navbar">
-                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/home.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/services.html">SERVICES</a></li>
                 <li><a href="/gallery.html">GALLERY</a></li>
