--- a/signUp.html
+++ b/signUp.html
@@ -28,11 +28,11 @@
 
         <div class="nav_bar">
             <ul class="navbar">
-                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/home.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/services.html">SERVICES</a></li>
                 <li><a href="/gallery.html">GALLERY</a></li>
-                <button type="button" class="btn btn-outline-dark"><a href="login.html">Log in</a></button>
+                <button type="button" class="btn btn-outline-dark"><a href="#">Log in</a></button>
                 <a class="cart" href="/cart.html"><i class="fas fa-shopping-bag fa-2x"><span> 0</span></i></a>
             </ul>
         </div>
