--- a/final_project/signUp.html
+++ b/final_project/signUp.html
@@ -8,12 +8,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style2.css">
-
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="main_js.js "></script>
 
 
 </head>
@@ -56,43 +58,44 @@
                 </div>
 
                 <div class="col-12">
-                    <label for="username" class="form-label">Username</label>
+                    <label for="email" class="form-label">Email</label>
                     <div class="input-group">
                         <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" id="username" placeholder="Username" required="">
+                        <input type="text" class="form-control" id="email" placeholder="you@example.com" required="">
                         <div class="invalid-feedback">
-                            Your username is required.
+                            Please enter a valid email address for shipping updates.
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12">
-                    <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                    <label for="userName" class="form-label">Username <span class="text-muted">(Required)</span></label>
+                    <input type="userName" class="form-control" id="userName" placeholder="Username Required">
                     <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
+                        Username is required for registration.
                     </div>
                 </div>
 
                 <div class="col-12">
-                    <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+                    <label for="pw" class="form-label">Password <span class="text-muted">(Required)</label>
+                    <input type="text" class="form-control" id="pw" placeholder=password required="">
                     <div class="invalid-feedback">
                         Please enter your shipping address.
                     </div>
                 </div>
 
                 <div class="col-12">
-                    <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-                    <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+                    <label for="address" class="form-label">Address <span class="text-muted">(Optional)</span></label>
+                    <input type="text" class="form-control" id="address" placeholder="Apartment or suite">
                 </div>
 
                 <div class="col-md-5">
                     <label for="country" class="form-label">Country</label>
                     <select class="form-select" id="country" required="">
-                    <option value="">Choose...</option>
-                    <option>United States</option>
-                  </select>
+                        <option value="">Choose...</option>
+                        <option>Singapore</option>
+                        <option>Outside of Singapore</option>
+                    </select>
                     <div class="invalid-feedback">
                         Please select a valid country.
                     </div>
@@ -101,23 +104,24 @@
                 <div class="col-md-4">
                     <label for="state" class="form-label">State</label>
                     <select class="form-select" id="state" required="">
-                    <option value="">Choose...</option>
-                    <option>California</option>
-                  </select>
+                        <option value="">Choose...</option>
+                        <option>California</option>
+                    </select>
                     <div class="invalid-feedback">
                         Please provide a valid state.
                     </div>
                 </div>
 
                 <div class="col-md-3">
-                    <label for="zip" class="form-label">Zip</label>
-                    <input type="text" class="form-control" id="zip" placeholder="" required="">
+                    <label for="postal" class="form-label">Postal Code</label>
+                    <input type="text" class="form-control" id="postal" placeholder="" required="">
                     <div class="invalid-feedback">
-                        Zip code required.
+                        Postal code required.
                     </div>
                 </div>
             </div>
         </div>
+        <button type="button" class="btn btn-outline-dark" onclick="store()">Sign Up</button>
 
         <div class="footer">
             <div class="container-footer">
@@ -128,7 +132,8 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 left">
-                        <p>(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                        <p>(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street
+                            #16-04 EQUITY PLAZA<br>Singapore 049705<br>
                         </p>
                     </div>
                     <div class="col-md-6 right">
@@ -144,8 +149,11 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="main_js.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+
+
 
 </body>
 
