--- a/cart.html
+++ b/cart.html
@@ -34,18 +34,33 @@
             </ul>
         </div>
 
-        <div class="container-products">
-            <div class="product-header">
-                <h5 class="product-title">PRODUCT</h5>
-                <h5 class="price sm-hide">PRICE</h5>
-                <h5 class="quantity">QUANTITY</h5>
-                <h5 class="total">TOTAL</h5>
+        <h1 class="cart-h1">Check out</h1>
+
+        <div class="row-cart">
+            <div class="col-md-8">
+                <div class="container-table">
+                    <div class="container-products">
+                        <div class="product-header">
+                            <h5 class="product-title">PRODUCT</h5>
+                            <h5 class="price sm-hide">PRICE</h5>
+                            <h5 class="quantity">QUANTITY</h5>
+                            <h5 class="total">TOTAL</h5>
+                        </div>
+                    </div>
+
+                    <div class="products">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="payment">
+
+                </div>
             </div>
         </div>
 
-        <div class="products">
-
-        </div>
 
 
         <div class="footer">
