--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/services.html">SERVICES</a></li>
                 <li><a href="/gallery.html">GALLERY</a></li>
-                <button type="button" class="btn btn-outline-dark"><a href="#">Log in</a></button>
+                <button type="button" class="btn btn-outline-dark"><a href="login.html">Log in</a></button>
                 <a class="cart" href="/cart.html"><i class="fas fa-shopping-bag fa-2x"><span> 0</span></i></a>
             </ul>
         </div>
