--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
             <p class="description"> // Insert short description of the services provided and something to entice custoemrs //</p>
         </div>
 
-        <div class="row item">
+        <!-- <div class="row item">
             <div class="col-md-6 img">
                 <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
             </div>
@@ -60,7 +60,7 @@
             <div class="col-md-6 img">
                 <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
             </div>
-        </div>
+        </div> -->
 
         <div class="row item ">
 
