made changes to JS file
- added comments for all web pages
- hard coded 'services page'
- hard coded data from json instead 'main_js' file (to try and parse json to local storage and stringify to html services page.

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
                 <li><a href="/home.html">HOME</a></li>
@@ -34,13 +35,14 @@
             </ul>
         </div>
 
+        <!-- content -->
         <div class="container services">
             <div class="row">
 
             </div>
         </div>
 
-
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
