--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DLJ & Co.</title>
+    <title>Services.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -13,9 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet.css">
-
-
-
 </head>
 
 <body>
@@ -26,6 +23,7 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
                 <li><a href="/home.html">HOME</a></li>
@@ -37,6 +35,7 @@
             </ul>
         </div>
 
+        <!-- content -->
         <div class="container carousel">
             <div class="row">
                 <div class="col">
@@ -81,6 +80,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
