--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cart</title>
+    <title>Services.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -23,6 +23,7 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
                 <li><a href="/home.html">HOME</a></li>
@@ -34,6 +35,7 @@
             </ul>
         </div>
 
+        <!-- content -->
         <div class="container-products">
             <div class="product-header">
                 <h5 class="product-title">PRODUCT</h5>
@@ -48,6 +50,7 @@
         </div>
 
 
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
