--- a/gallery.html
+++ b/gallery.html
@@ -23,9 +23,10 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
-                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/home.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/services.html">SERVICES</a></li>
                 <li><a href="/gallery.html">GALLERY</a></li>
@@ -34,13 +35,14 @@
             </ul>
         </div>
 
+        <!-- content -->
         <div class="container services">
             <div class="row">
 
             </div>
         </div>
 
-
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
