--- a/signUp.html
+++ b/signUp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DLJ & Co.</title>
+    <title>Sign up</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -26,6 +26,7 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
                 <li><a href="/home.html">HOME</a></li>
@@ -37,6 +38,7 @@
             </ul>
         </div>
 
+        <!-- content -->
         <div class="signUp">
             <div class="row">
                 <div class="col-sm-6">
@@ -119,8 +121,9 @@
                 </div>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-dark" onclick="store()">Sign Up</button>
+        <button type="button" class="signup btn btn-outline-dark " onclick="store()">Sign Up</button>
 
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
@@ -130,13 +133,13 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 left">
-                        <p>(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                        <p class="address">(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
                         </p>
                     </div>
                     <div class="col-md-6 right">
-                        <h3>Follow Us</h3>
-                        <a href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
-                        <a href="https://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
+                        <h3 class="follow-us">Follow Us</h3>
+                        <a class="social-media-icon" href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a class="social-media-icon" href="https://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
                     </div>
                 </div>
@@ -146,9 +149,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
 
 </body>
 
