--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Services.</title>
+    <title>Services</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -23,6 +23,7 @@
             </div>
         </div>
 
+        <!-- Navigation bar -->
         <div class="nav_bar">
             <ul class="navbar">
                 <li><a href="/home.html">HOME</a></li>
@@ -34,9 +35,58 @@
             </ul>
         </div>
 
-        <div class="row title">
+        <!-- Page title -->
+        <div class="row_title">
             <h1>Services</h1>
             <p class="description"> // Insert short description of the services provided and something to entice custoemrs //</p>
+        </div>
+
+        <!-- content -->
+        <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="productName">Wedding Package</h4>
+                <p class="details">We fly you to your dream destination in style. Let our team make the all the arrangements while you look your best for your special day, glamourous and effervescent</p>
+                <p class="">$5,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
+
+        <div class="row item ">
+            <div class="col-md-6 services">
+                <h4 class="productName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 img">
+                <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
+            </div>
+        </div>
+
+        <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="productName">Wedding Package</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
+
+        <div class="row item ">
+            <div class="col-md-6 services">
+                <h4 class="productName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 img">
+                <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
+            </div>
         </div>
 
         <div class="row item">
@@ -63,6 +113,17 @@
         </div>
 
 
+        <!-- Hoping to parse data.JSON file with producs/services into this area -->
+        <!-- <div class="container services">
+            <div class="row item ">
+
+            </div>
+            <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+        </div> -->
+
+        <a href="#top"><button type="button" class="btn btn-outline-dark top">Back to top</button></a>
+
+        <!-- footer -->
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
@@ -90,6 +151,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
     <script src="main_js.js "></script>
+    <script src="data.json"></script>
 
 </body>
 
