--- a/services.html
+++ b/services.html
@@ -48,8 +48,7 @@
             </div>
             <div class="col-md-6 services">
                 <h4 class="productName">Wedding Package</h4>
-                <p class="details">We fly you to your dream destination in style. Let our team make the all the arrangements while you look your best for your special day, glamourous and effervescent</p>
-                <p class="">$5,000</p>
+                <p class="details">// ITEM DESCRIPTION //</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
         </div>
