--- a/gallery.html
+++ b/gallery.html
@@ -35,8 +35,14 @@
             </ul>
         </div>
 
+        <!-- Page title -->
+        <div class="row_title">
+            <h1>Gallery</h1>
+            <p class="description"> // Insert short description of the services provided and something to entice custoemrs //</p>
+        </div>
+
         <!-- content -->
-        <div class="container services">
+        <div class="container gallery">
             <div class="row">
 
             </div>
