updated pic file name from wedding4 to weddingPackage

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                             </div>
 
                             <div class="carousel-item">
-                                <img src="PhotoStudio/wedding4.jpg" class="d-block w-100" alt="...">
+                                <img src="PhotoStudio/weddingPackage.jpg" class="d-block w-100" alt="...">
 
                             </div>
 
@@ -76,7 +76,7 @@
                     <img src="PhotoStudio/wedding3.jpg" alt="Wedding 2" style="width:100%">
                 </div>
                 <div class="column">
-                    <img src="PhotoStudio/wedding4.jpg" alt="Wedding 3" style="width:100%">
+                    <img src="PhotoStudio/weddingPackage.jpg" alt="Wedding 3" style="width:100%">
                 </div>
             </div>
         </div>
