--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,10 @@
         <!-- content -->
         <div class="container gallery">
             <div class="row">
+                <div class="column">
+                    <img src="">
 
+                </div>
             </div>
         </div>
 
