--- a/services.html
+++ b/services.html
@@ -42,12 +42,12 @@
         </div>
 
         <!-- content -->
-        <div class="row item">
+        <!-- <div class="row item">
             <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
+                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="productName">Wedding Package</h4>
+                <h4 class="productName">/ PRODUCT NAME //</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
@@ -61,16 +61,16 @@
             </div>
 
             <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
+                <img class="item img " src="PhotoStudio/architectural.jpg " alt="Card image cap ">
             </div>
         </div>
 
         <div class="row item">
             <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
+                <img class="item img" src="PhotoStudio/studio.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="productName">Wedding Package</h4>
+                <h4 class="productName">/ PRODUCT NAME //</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
@@ -84,16 +84,16 @@
             </div>
 
             <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
+                <img class="item img " src="PhotoStudio/drone.jpg " alt="Card image cap ">
             </div>
         </div>
 
         <div class="row item">
             <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/wedding3.jpg" alt="Card image cap">
+                <img class="item img" src="PhotoStudio/outdoor.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="productName">Wedding Package</h4>
+                <h4 class="productName">// PRODUCT NAME //</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
@@ -107,18 +107,95 @@
             </div>
 
             <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/scenery.jpg " alt="Card image cap ">
+                <img class="item img " src="PhotoStudio/product.jpg" alt="Card image cap ">
             </div>
-        </div>
-
-
-        <!-- Hoping to parse data.JSON file with producs/services into this area -->
-        <!-- <div class="container services">
-            <div class="row item ">
-
-            </div>
-            <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
         </div> -->
+
+        <!-- ############################# DEBUG COPY  ##############################-->
+
+        <!-- <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="serviceName">/ PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div> -->
+
+
+
+
+        <div class="row item ">
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 img">
+                <img class="item img " src="PhotoStudio/architectural.jpg " alt="Card image cap ">
+            </div>
+        </div>
+
+        <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/studio.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
+
+        <div class="row item ">
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 img">
+                <img class="item img " src="PhotoStudio/drone.jpg " alt="Card image cap ">
+            </div>
+        </div>
+
+        <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/outdoor.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
+
+        <div class="row item ">
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 img">
+                <img class="item img " src="PhotoStudio/product.jpg" alt="Card image cap ">
+            </div>
+        </div>
+
+        <!-- <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div> -->
+
 
         <a href="#top"><button type="button" class="btn btn-outline-dark top">Back to top</button></a>
 
