updated js file OMG IT WORKS

--- a/services.html
+++ b/services.html
@@ -124,8 +124,16 @@
             </div>
         </div> -->
 
-
-
+        <div class="row item">
+            <div class="col-md-6 img">
+                <img class="item img" src="PhotoStudio/wedding.jpg" alt="Card image cap">
+            </div>
+            <div class="col-md-6 services">
+                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <p class="details">// ITEM DESCRIPTION //</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
 
         <div class="row item ">
             <div class="col-md-6 services">
@@ -184,17 +192,6 @@
                 <img class="item img " src="PhotoStudio/product.jpg" alt="Card image cap ">
             </div>
         </div>
-
-        <!-- <div class="row item">
-            <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
-            </div>
-            <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-        </div> -->
 
 
         <a href="#top"><button type="button" class="btn btn-outline-dark top">Back to top</button></a>
