fixed broken css link products_wedding2.html

--- a/luqman_files/product_wedding2.html
+++ b/luqman_files/product_wedding2.html
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="assets/css/waterfall.css">
-    <script src="assets/js/waterfall.js" async> </script>
+    <script src="assets/java/waterfall.js" async> </script>
 
 </head>
 
