restructured files into CSS and JS files

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About</title>
+    <title>DLJ & Co.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
 </head>
 
 <body>
     <div class="container">
         <div class="top">
             <div class="company-logo">
-                <img src="PhotoStudio/logo.png" alt="Company logo">
+                <img src="/assets/images/logo.png" alt="Company logo">
             </div>
         </div>
 
