--- a/home.html
+++ b/home.html
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
 </head>
 
 <body>
     <div class="container">
         <div class="top">
             <div class="company-logo">
-                <img src="PhotoStudio/logo.png" alt="Company logo">
+                <img src="/assets/images/logo.png" alt="Company logo">
             </div>
         </div>
 
@@ -42,16 +42,16 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide container" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="PhotoStudio/scenery.jpg" class="d-block w-100" alt="...">
+                                <img src="/assets/images/scenery.jpg" class="d-block w-100" alt="...">
                             </div>
 
                             <div class="carousel-item">
-                                <img src="PhotoStudio/gowns2.png" class="d-block w-100" alt="...">
+                                <img src="/assets/images/gowns2.png" class="d-block w-100" alt="...">
 
                             </div>
 
                             <div class="carousel-item">
-                                <img src="PhotoStudio/wedding.jpg" class="d-block w-100" alt="...">
+                                <img src="/assets/images/wedding.jpg" class="d-block w-100" alt="...">
 
                             </div>
 
@@ -64,19 +64,19 @@
         <div class="bottom container">
             <div class="row gallery">
                 <div class="column">
-                    <img src="PhotoStudio/singapore1.jpg" alt="Gardens By The Bay" style="width:100%">
+                    <img src="/assets/images/singapore1.jpg" alt="Gardens By The Bay" style="width:100%">
                 </div>
                 <div class="column">
-                    <img src="PhotoStudio/gowns2.png" alt="Wedding gown" style="width:100%">
+                    <img src="/assets/images/gowns2.png" alt="Wedding gown" style="width:100%">
                 </div>
                 <div class="column">
-                    <img src="PhotoStudio/scenery.jpg" alt="Beautiful scenery" style="width:100%">
+                    <img src="/assets/images/scenery.jpg" alt="Beautiful scenery" style="width:100%">
                 </div>
                 <div class="column">
-                    <img src="PhotoStudio/wedding3.jpg" alt="Wedding 2" style="width:100%">
+                    <img src="/assets/images/wedding3.jpg" alt="Wedding 2" style="width:100%">
                 </div>
                 <div class="column">
-                    <img src="PhotoStudio/wedding.jpg" alt="Wedding 3" style="width:100%">
+                    <img src="/assets/images/wedding.jpg" alt="Wedding 3" style="width:100%">
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
-                    <a href="mailto:dlj@gmail.com"><img class="logo" src="./PhotoStudio/logo.png">
+                    <a href="mailto:dlj@gmail.com"><img class="logo" src="/assets/images/logo.png">
                     </a>
                     <hr>
                 </div>
