--- a/signUp.html
+++ b/signUp.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylesheet.css">
-    <script src="main_js.js "></script>
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
+    <script src="/assets/js/main_js.js "></script>
 
 
 </head>
