--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Services</title>
+    <title>DLJ & Co.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
 </head>
 
 <body>
     <div class="container">
         <div class="top">
             <div class="company-logo">
-                <img src="PhotoStudio/logo.png" alt="Company logo">
+                <img src="/assets/images/logo.png" alt="Company logo">
             </div>
         </div>
 
@@ -42,103 +42,25 @@
         </div>
 
         <!-- content -->
-        <!-- <div class="row item">
-            <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
-            </div>
-            <div class="col-md-6 services">
-                <h4 class="productName">/ PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-        </div>
-
-        <div class="row item ">
-            <div class="col-md-6 services">
-                <h4 class="productName">// PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-
-            <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/architectural.jpg " alt="Card image cap ">
-            </div>
-        </div>
-
-        <div class="row item">
-            <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/studio.jpg" alt="Card image cap">
-            </div>
-            <div class="col-md-6 services">
-                <h4 class="productName">/ PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-        </div>
-
-        <div class="row item ">
-            <div class="col-md-6 services">
-                <h4 class="productName">// PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-
-            <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/drone.jpg " alt="Card image cap ">
-            </div>
-        </div>
-
-        <div class="row item">
-            <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/outdoor.jpg" alt="Card image cap">
-            </div>
-            <div class="col-md-6 services">
-                <h4 class="productName">// PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-        </div>
-
-        <div class="row item ">
-            <div class="col-md-6 services">
-                <h4 class="productName">// PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-
-            <div class="col-md-6 img">
-                <img class="item img " src="PhotoStudio/product.jpg" alt="Card image cap ">
-            </div>
-        </div> -->
-
-        <!-- ############################# DEBUG COPY  ##############################-->
-
-        <!-- <div class="row item">
-            <div class="col-md-6 img">
-                <img class="item img" src="PhotoStudio/weddingPackage.jpg" alt="Card image cap">
-            </div>
-            <div class="col-md-6 services">
-                <h4 class="serviceName">/ PRODUCT NAME //</h4>
-                <p class="details">// ITEM DESCRIPTION //</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
-            </div>
-        </div> -->
-
         <div class="row item">
             <div class="col-md-6 img">
                 <img class="item img" src="PhotoStudio/wedding.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Wedding Package</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$5,000</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
         </div>
 
         <div class="row item ">
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Architectural</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$1,000</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
 
@@ -152,16 +74,20 @@
                 <img class="item img" src="PhotoStudio/studio.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Studio</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$2,000</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
         </div>
 
         <div class="row item ">
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Drone</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$5,000</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
 
@@ -175,16 +101,20 @@
                 <img class="item img" src="PhotoStudio/outdoor.jpg" alt="Card image cap">
             </div>
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Outdoor Photoshoot</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$3,000</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
         </div>
 
         <div class="row item ">
             <div class="col-md-6 services">
-                <h4 class="serviceName">// PRODUCT NAME //</h4>
+                <h4 class="serviceName">Product</h4>
                 <p class="details">// ITEM DESCRIPTION //</p>
+                <hr class="hr2">
+                <p class="service price">$4,500</p>
                 <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
             </div>
 
@@ -223,7 +153,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW " crossorigin="anonymous "></script>
-    <script src="main_js.js"></script>
+    <script src="/assets/js/main_js.js "></script>
 
 </body>
 
