--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
                 <p class="details">// ITEM DESCRIPTION //</p>
                 <hr class="hr2">
                 <p class="service price">$5,000</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+                <button type="button" class="add-cart">Add to cart</button>
             </div>
         </div>
 
@@ -61,7 +61,7 @@
                 <p class="details">// ITEM DESCRIPTION //</p>
                 <hr class="hr2">
                 <p class="service price">$1,000</p>
-                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+                <button type="button" class="add-cart">Add to cart</button>
             </div>
 
             <div class="col-md-6 img">
