Updated Services page + btn for navbar

--- a/gallery_outdoors.html
+++ b/gallery_outdoors.html
@@ -32,7 +32,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark rounded">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars fa-lg"><span class="navbar-toggler-icon"></span></i>
         </button>
 
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
