--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark rounded">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars fa-lg"><span class="navbar-toggler-icon"></span></i>
         </button>
 
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
@@ -95,7 +95,7 @@
         </div>
 
         <!-- content -->
-        <div class="row item">
+        <!-- <div class="row item">
             <div class="col-md-6 img">
                 <a href="/gallery_wedding.html"><img class="item-img" src="PhotoStudio/wedding.jpg" alt="Card image cap">
                 </a>
@@ -175,8 +175,70 @@
             <div class="col-md-6 img">
                 <a href="gallery_product.html"><img class="item-img" src="PhotoStudio/product.jpg" alt="Card image cap "></a>
             </div>
+        </div> -->
+
+        <div class="row item">
+            <div class="col-md-6">
+                <a href="/gallery_wedding.html"><img class="item-img" src="PhotoStudio/wedding.jpg" alt="Card image cap">
+                </a>
+                <h4 class="serviceName">Wedding Package</h4>
+                <p class="details">Lift the memories of your wedding day with pictures taken in exotic locales</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$5,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6">
+                <a href="gallery_architecture.html"><img class="item-img" src="PhotoStudio/architectural.jpg " alt="Card image cap "></a>
+                <h4 class="serviceName">Architectural</h4>
+                <p class="details">Impress your clients, or shore up your portfolio with our Architectural photography services.</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$1,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+
+            </div>
         </div>
 
+        <div class="row item">
+            <div class="col-md-6 ">
+                <a href="gallery_studio.html"> <img class="item-img" src="PhotoStudio/studio.jpg" alt="Card image cap"></a>
+                <h4 class="serviceName">Studio</h4>
+                <p class="details">Look your best for your headshots and corporate profiles.</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$2,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6 ">
+                <a href="gallery_drone.html"> <img class="item-img" src="PhotoStudio/drone.jpg " alt="Card image cap "></a>
+                <h4 class="serviceName">Drone</h4>
+                <p class="details">We offer the best drone photography and videography services in Singapore.</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$5,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
+
+
+        <div class="row item">
+            <div class="col-md-6">
+                <a href="gallery_outdoors.html"> <img class="item-img" src="PhotoStudio/outdoor.jpg" alt="Card image cap"></a>
+                <h4 class="serviceName">Outdoor</h4>
+                <p class="details">Take in dizzying landscapes with our outdoors photography and videography packages</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$3,000</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+
+            <div class="col-md-6">
+                <a href="gallery_product.html"><img class="item-img" src="PhotoStudio/product.jpg" alt="Card image cap "></a>
+                <h4 class="serviceName">Product</h4>
+                <p class="details">Have a product to sell? Have its picture professionally taken.</p>
+                <hr style="border: 2px solid grey; width:100%;margin-right: 100%;">
+                <p class="service price">$4,500</p>
+                <button type="button" class="add-cart" onclick="addToCart()">Add to cart</button>
+            </div>
+        </div>
 
         <a href="#top"><button type="button" class="btn btn-outline-dark top">Back to top</button></a>
 
