--- a/home.html
+++ b/home.html
@@ -89,6 +89,21 @@
 
 
         <!-- content -->
+
+        <div class="parallax">
+            <h1 class="parallax-text">
+                Today's MOMENTS<br>are tomorrow's MEMORIES</h1>
+        </div>
+
+
+        <div class="text-box">
+            We strive to capture those special moments as they happen. It means being alive to the present, honouring the past, creating real treasures for the future. If you're looking for a photographer who relishes the polished + proper portraits, then you've
+            come to the wrong place. We all about the inbetween moments; we thrive in the details.
+        </div>
+
+        <div class="parallax2"></div>
+
+
         <div class="container carousel">
             <div class="row">
                 <div class="col">
