Added chatbot, whatsapp button and updated main.js file

--- a/gallery_architecture.html
+++ b/gallery_architecture.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 left">
-                        <p class="address">(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                        <p class="address">(+65)333400 <br> <a class="contact-us" href="mailto:dlj@gmail.com">Contact us here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
                         </p>
                     </div>
                     <div class="col-md-6 right">
@@ -197,6 +197,7 @@
                         <a class="social-media-icon" href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
                         <a class="social-media-icon" href="https://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="https://wa.me/6590085322"><i class="fab fa-whatsapp fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -205,11 +206,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap core JavaScript
-================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
