--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
                             </div>
 
                             <div class="carousel-item">
-                                <img src="/assets/images/wedding5.jpg" class="d-block w-100" alt="...">
+                                <img src="/assets/images/studio.jpg" class="d-block w-100" alt="...">
 
                             </div>
 
@@ -193,22 +193,6 @@
     <script src="assets/js/waterfall.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script>
-        function initFreshChat() {
-            window.fcWidget.init({
-                token: "dc12e29a-b0b9-4ced-8059-8e5d56fda4ae",
-                host: "https://wchat.freshchat.com"
-            });
-        }
-
-        function initialize(i, t) {
-            var e;
-            i.getElementById(t) ? initFreshChat() : ((e = i.createElement("script")).id = t, e.async = !0, e.src = "https://wchat.freshchat.com/js/widget.js", e.onload = initFreshChat, i.head.appendChild(e))
-        }
-
-        function initiateCall() {
-            initialize(document, "freshchat-js-sdk")
-        }
-        window.addEventListener ? window.addEventListener("load", initiateCall, !1) : window.attachEvent("load", initiateCall, !1);
     </script>
 </body>
 
