--- a/services.html
+++ b/services.html
@@ -164,13 +164,13 @@
         <div class="footer">
             <div class="container-footer">
                 <div class="row">
-                    <a href="mailto:dlj@gmail.com"><img class="logo" src="./PhotoStudio/logo.png">
+                    <a href="mailto:dlj@gmail.com"><img class="logo" src="/assets/images/logo.png">
                     </a>
                     <hr>
                 </div>
                 <div class="row">
                     <div class="col-md-6 left">
-                        <p class="address">(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                        <p class="address">(+65)333400 <br> <a class="contact-us" href="mailto:dlj@gmail.com">Contact us here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
                         </p>
                     </div>
                     <div class="col-md-6 right">
@@ -178,6 +178,7 @@
                         <a class="social-media-icon" href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
                         <a class="social-media-icon" href="https://www.twitter.com/"><i class="fab fa-twitter fa-lg"></i></a>
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="https://wa.me/6590085322"><i class="fab fa-whatsapp fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="row">
