--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="top">
             <div class="company-logo">
-                <img src="/assets/images/logo.png" alt="Company logo">
+                <img src="assets/images/logo.png" alt="Company logo">
             </div>
         </div>
 
